# claude-jester-mcp

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  pyproject_toml
docs/: README.md
examples/: CHANGELOG.md  SECURITY.md  example_config.json  example_usage.py
scripts/: quick_install_script.sh
src/claude_jester_mcp/: __init__.py  __main__.py  cli.py
src/claude_jester_mcp/core/: __init__.py  executor.py  learning_system.py
src/claude_jester_mcp/mcp/: __init__.py  server.py
src/claude_jester_mcp/monitoring/: __init__.py  monitoring_dashboard.py
src/claude_jester_mcp/security/: __init__.py  audit.py  isolation.py  monitoring.py  sandbox.py
src/core/: quantum_debugger.py
src/mcp/: server.py
src/mcp_sdk/: __init__.py  server.py  setup.py  types.py
src/mcp_sdk/mcp_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: setup.py  test_executor.py
